+ fixed queue order

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -68,5 +68,6 @@
         "typeinfo": "cpp",
         "variant": "cpp",
         "queue": "cpp"
-    }
+    },
+    "C_Cpp.vcFormat.space.pointerReferenceAlignment": "left"
 }
